switched to cordelia 6.0.0 and json-rpc 2.0